--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <script type="text/javascript" src="./js/jssor.slider.js"></script>
 <style type="text/css">
 body {
-	background-color: #6FC;
+	background-color: #61b056;
 	alignment-baseline:middle;
 	font-family: 'Oxygen', sans-serif;
 	font-size:20px;
