--- a/index.html
+++ b/index.html
@@ -30,16 +30,14 @@
             <a href="" class="brand-logo"></a>
             <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
             <ul class="right hide-on-med-and-down">
-                <li><a>Sass</a></li>
-                <li><a>Components</a></li>
-                <li><a>Javascript</a></li>
-                <li><a>Mobile</a></li>
+                <li><a>Menu</a></li>
+                <li><a>Gallery</a></li>
+                <li><a>Contacts</a></li>
             </ul>
             <ul class="side-nav" id="mobile-demo">
-                <li><a>Sass</a></li>
-                <li><a>Components</a></li>
-                <li><a>Javascript</a></li>
-                <li><a>Mobile</a></li>
+                <li><a>Menu</a></li>
+                <li><a>Gallery</a></li>
+                <li><a>Contacts</a></li>
             </ul>
         </div>
     </nav>
@@ -57,9 +55,9 @@
             </div>
         </div>
 
-        <div class="row">
-          <div class="col s12 grid-example"><span class="flow-text">This div is 12-columns wide on all screen sizes</span></div>
-          <div class="col s6 offset-s6 grid-example"><span class="flow-text">6-columns (offset-by-6)</span></div>
+        <div class="row center-align">
+            <div class="col m12"><h3>Thai Cuisine</h3></div>
+          <div class="col"></div>
         </div>
     </div>
 
