--- a/gallery.html
+++ b/gallery.html
@@ -20,6 +20,7 @@
     <div class="navbar-fixed">
         <nav>
             <div class="nav-wrapper">
+                <a href="home.html" class="brand-logo center"><img id="nav-logo" class="responsive-img center-align" src="assets/Pattaya%20Logo.png"></a>
                 <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
                 <ul class="right hide-on-med-and-down">
                     <li><a href="menu.html">Menu</a></li>
