--- a/home.html
+++ b/home.html
@@ -63,7 +63,7 @@
         </div>
         <div class="row center-align">
             <div class="col s6 offset-s3" id="subtitle">
-                <h5 class="flowing-text">Enjoy good quality Thia food</h5>
+                <h5 class="flowing-text">Enjoy good quality Thai food</h5>
                 <h5 class="flowing-text">without blowing your budget</h5>
             </div>
         </div>
