switched to slide show

--- a/gallery.html
+++ b/gallery.html
@@ -59,7 +59,7 @@
     <div class="slider">
         <ul class="slides">
             <li>
-                <img src="http://lorempixel.com/580/250/nature/1">
+                <img src="assets/gallery/1.jpg">
                 <!-- random image -->
                 <div class="caption center-align">
                     <h3>This is our big Tagline!</h3>
@@ -67,7 +67,7 @@
                 </div>
             </li>
             <li>
-                <img src="http://lorempixel.com/580/250/nature/2">
+                <img src="assets/gallery/2.jpg">
                 <!-- random image -->
                 <div class="caption left-align">
                     <h3>Left Aligned Caption</h3>
@@ -75,7 +75,7 @@
                 </div>
             </li>
             <li>
-                <img src="http://lorempixel.com/580/250/nature/3">
+                <img src="assets/gallery/3.jpg">
                 <!-- random image -->
                 <div class="caption right-align">
                     <h3>Right Aligned Caption</h3>
@@ -83,7 +83,7 @@
                 </div>
             </li>
             <li>
-                <img src="http://lorempixel.com/580/250/nature/4">
+                <img src="assets/gallery/4.jpg">
                 <!-- random image -->
                 <div class="caption center-align">
                     <h3>This is our big Tagline!</h3>
