--- a/gallery.html
+++ b/gallery.html
@@ -101,6 +101,35 @@
           $('.slider').slider({full_width: true});
         });
     </script>
+    
+    <footer class="page-footer">
+        <div class="container">
+            <div class="row">
+                <div class="col l6 s12">
+                    <h5 class="white-text">Thai Cuisine</h5>
+                    <ul>
+                        <li><a class="grey-text text-lighten-3">Come try our food!</a></li>
+                        <li><a class="grey-text text-lighten-3">Or call us at (678) 878-3117</a></li>
+                        <li><a class="grey-text text-lighten-3">for delivery!</a></li>
+                    </ul>
+                </div>
+                <div class="col l4 offset-l2 s12">
+                    <h5 class="white-text">Navigation</h5>
+                    <ul>
+                        <li><a class="grey-text text-lighten-3" href="home.html">Home</a></li>
+                        <li><a class="grey-text text-lighten-3" href="menu.html">Menu</a></li>
+                        <li><a class="grey-text text-lighten-3" href="gallery.html">Gallery</a></li>
+                        <li><a class="grey-text text-lighten-3" href="contacts.html">Contacts</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="footer-copyright">
+            <div class="container">
+                © 2014 Copyright Text
+            </div>
+        </div>
+    </footer>
 
 </body>
 
