--- a/gallery.html
+++ b/gallery.html
@@ -30,16 +30,21 @@
                 <ul class="right hide-on-med-and-down">
                     <li><a href="menu.html">Menu</a></li>
                     <li><a href="gallery.html">Gallery</a></li>
-                    <li><a href="contacts.html">Contacts</a></li>
+                    <li><a href="contacts.html">Contact Us</a></li>
                 </ul>
                 <ul class="side-nav" id="mobile-demo">
                     <li><a href="menu.html">Menu</a></li>
                     <li><a href="gallery.html">Gallery</a></li>
-                    <li><a href="contacts.html">Contacts</a></li>
+                    <li><a href="contacts.html">Contact Us</a></li>
                 </ul>
             </div>
         </nav>
     </div>
+    
+    <script>
+        $(".button-collapse").sideNav();
+
+    </script>
 
     <!-- gallery structure -->
 
@@ -62,32 +67,32 @@
                 <img src="assets/gallery/1.jpg">
                 <!-- random image -->
                 <div class="caption center-align">
-                    <h3>This is our big Tagline!</h3>
-                    <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
+                    <h3></h3>
+                    <h5 class="light grey-text text-lighten-3"></h5>
                 </div>
             </li>
             <li>
                 <img src="assets/gallery/2.jpg">
                 <!-- random image -->
                 <div class="caption left-align">
-                    <h3>Left Aligned Caption</h3>
-                    <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
+                    <h3></h3>
+                    <h5 class="light grey-text text-lighten-3"></h5>
                 </div>
             </li>
             <li>
                 <img src="assets/gallery/3.jpg">
                 <!-- random image -->
                 <div class="caption right-align">
-                    <h3>Right Aligned Caption</h3>
-                    <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
+                    <h3></h3>
+                    <h5 class="light grey-text text-lighten-3"></h5>
                 </div>
             </li>
             <li>
                 <img src="assets/gallery/4.jpg">
                 <!-- random image -->
                 <div class="caption center-align">
-                    <h3>This is our big Tagline!</h3>
-                    <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
+                    <h3></h3>
+                    <h5 class="light grey-text text-lighten-3"></h5>
                 </div>
             </li>
         </ul>
