--- a/contacts.html
+++ b/contacts.html
@@ -1,9 +1,11 @@
+
 <html>
 
 <head>
+    
     <!--JQuery-->
     <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
-    
+
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
@@ -22,6 +24,8 @@
 
 
     <script>
+        var marker;
+
         function initialize() {
             var myLatlng = new google.maps.LatLng(34.005484, -84.173672);
             var mapCanvas = document.getElementById('map-canvas');
@@ -31,11 +35,21 @@
                 mapTypeId: google.maps.MapTypeId.ROADMAP
             }
             var map = new google.maps.Map(mapCanvas, mapOptions)
-            var marker = new google.maps.Marker({
+            marker = new google.maps.Marker({
                 position: myLatlng,
                 map: map,
+                animation: google.maps.Animation.DROP,
                 title: 'Pattaya Cafe'
             });
+            google.maps.event.addListener(marker, 'click', toggleBounce);
+        }
+
+        function toggleBounce() {
+            if (marker.getAnimation() != null) {
+                marker.setAnimation(null);
+            } else {
+                marker.setAnimation(google.maps.Animation.BOUNCE);
+            }
         }
         google.maps.event.addDomListener(window, 'load', initialize);
 
@@ -67,31 +81,38 @@
         <div class="row">
             <div class="col m6">
                 <h3>Location</h3>
-                <div id="map-canvas" class="col s12" ></div>
+                <div id="map-canvas" class="col s12"></div>
             </div>
-            <div class="col m6">
+            <div class="col l6">
                 <h3>Email us here:</h3>
-                <form class="col s12">
+                <form class="col l12" method="post" action="php/emailForm.php">
                     <div class="row">
                         <div class="input-field col s6">
-                            <input id="first_name" type="text" class="validate">
+                            <input name="first_name" type="text" class="validate">
                             <label for="first_name">First Name</label>
                         </div>
                         <div class="input-field col s6">
-                            <input id="last_name" type="text" class="validate">
+                            <input name="last_name" type="text" class="validate">
                             <label for="last_name">Last Name</label>
                         </div>
                     </div>
                     <div class="row">
                         <div class="input-field col s12">
-                            <input id="email" type="email" class="validate">
-                            <label for="email" data-error="Please enter a valid email" data-success="Thank You">Email</label>
+                            <input name="email" type="email" class="validate">
+                            <label for="email" data-error="Invalid email">Email</label>
                         </div>
                     </div>
                     <div class="row">
                         <div class="input-field col s12">
-                            <textarea id="textarea" class="materialize-textarea"></textarea>
-                            <label for="textarea">Content</label>
+                            <textarea name="message" class="materialize-textarea"></textarea>
+                            <label for="textarea">Message</label>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col s4 offset-s8">
+                            <button class="btn waves-effect waves-light" type="submit" name="submit">send
+                                <i class="material-icons right">send</i>
+                            </button>
                         </div>
                     </div>
                 </form>
@@ -99,11 +120,13 @@
         </div>
     </div>
 
+
     <script type="text/javascript">
         $(document).ready(function() {
             $('select').material_select();
         });
         $(".button-collapse").sideNav();
+
     </script>
 
     <footer class="page-footer">
